--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Comments#index</h1>
-<p>Find me in app/views/comments/index.html.erb</p>
+<%= react_component("CommentBox", { data: @comments }) %>
