--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,1 +1,3 @@
-<%= react_component("CommentBox", { data: @comments }) %>
+<% cache do %>
+  <%= react_component("CommentBox", { data: @comments }, prerender: true) %>
+<% end %>
